--- a/checklist.html
+++ b/checklist.html
@@ -71,7 +71,7 @@ USB for recording</li>
 <li><input type="checkbox" disabled="" />
 iPod Stereo adapter plugged into Channels 15 and 16</li>
 <li><input type="checkbox" disabled="" />
-Headphones with 1/4" adapter</li>
+Headphones with 1/4” adapter</li>
 </ul>
 <h2 id="loudspeakers">Loudspeakers</h2>
 <p>Place the speaker stands parallel to each other in “front” of the “stage” setup. Angle the QSC loudspeakers to point toward the middle of the audience raised up above your head. Wrap the power cable and XLR cable loosely around the speaker stands.</p>
@@ -90,32 +90,14 @@ Headphones with 1/4" adapter</li>
 <h2 id="floor-monitor">Floor Monitor</h2>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Behringer 12" powered speaker placed 2’ dignally in front of Cantor</li>
+Behringer 12” powered speaker placed 2’ dignally in front of Cantor</li>
 <li><input type="checkbox" disabled="" />
 Power cable</li>
 <li><input type="checkbox" disabled="" />
 30’ XLR Cable from AUX 1 on mixer to Line In</li>
 </ul>
-<h2 id="output-to-video-streaming-system">Output to Video Streaming System</h2>
-<p>The ATEM Mini Pro requires a stereo mini connection. We are outputing AUX 3 and AUX 4 for the stream</p>
-<ul class="task-list">
-<li><input type="checkbox" disabled="" />
-XLR 50’ cable from AUX 3 to XLR-stereo mini adapter</li>
-<li><input type="checkbox" disabled="" />
-XLR 50’ cable from AUX 4 to XLR-stereo mini adapter</li>
-<li><input type="checkbox" disabled="" />
-XLR Male to Stereo Mini Adapter</li>
-<li><input type="checkbox" disabled="" />
-UNMUTE Aux 3 and 4</li>
-<li><input type="checkbox" disabled="" />
-OPTIONAL - Headphone splitter to monitor Stream Audio</li>
-<li><input type="checkbox" disabled="" />
-OPTIONAL - Headphones with 1/4" adapter for headphone splitter</li>
-<li><input type="checkbox" disabled="" />
-OPTIONAL - 1/4" to Stereo mini adapter if headphone splitter used</li>
-</ul>
 <h2 id="network-extension">Network Extension</h2>
-<p>We cannot plug directly into the network and must use a wifi router to get better signal to the ipad and also allow ethernet to the video streamer.</p>
+<p>We would like to connect the X-Air 16 to the network.</p>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Router: Airport Extreme or other preconfigured router</li>
@@ -148,7 +130,7 @@ Microphone stand</li>
 <li><input type="checkbox" disabled="" />
 Mic clip appropriate for the microphone</li>
 <li><input type="checkbox" disabled="" />
-SM 58 handheld microphone</li>
+Audix OM 5 handheld microphone</li>
 <li><input type="checkbox" disabled="" />
 30 - 50’ XLR cable</li>
 <li><input type="checkbox" disabled="" />
@@ -162,16 +144,16 @@ Microphone stand</li>
 <li><input type="checkbox" disabled="" />
 Mic clip appropriate for the microphone</li>
 <li><input type="checkbox" disabled="" />
-handheld microphone</li>
+handheld microphone (OM 5, SM 58, SM 57)</li>
 <li><input type="checkbox" disabled="" />
 30 - 50’ XLR cable</li>
 <li><input type="checkbox" disabled="" />
 Plug into #3 (or following available)</li>
 </ul>
-<h2 id="instrumentalists-with-14-output">Instrumentalists with 1/4" Output</h2>
+<h2 id="instrumentalists-with-14-output">Instrumentalists with 1/4” Output</h2>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-1/4" cable from instrument directly into Mixer</li>
+1/4” cable from instrument directly into Mixer</li>
 <li><input type="checkbox" disabled="" />
 Piano into Channel 9</li>
 <li><input type="checkbox" disabled="" />
