--- a/video-checklist.html
+++ b/video-checklist.html
@@ -79,45 +79,41 @@ OPTIONAL: 4 port ethernet switch at table to connect laptop and atem</li>
 <h2 id="external-preview-monitor">External Preview Monitor</h2>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Marshall 7" HDMI display</li>
+Samsung 21” monitor</li>
 <li><input type="checkbox" disabled="" />
-Tripod mount</li>
-<li><input type="checkbox" disabled="" />
-Power adapter (same as sdi cam)</li>
+Monitor power adapter</li>
 <li><input type="checkbox" disabled="" />
 Power extension as needed</li>
 <li><input type="checkbox" disabled="" />
 HDMI cable to ATEM</li>
 </ul>
 <h2 id="camera-1---gopro">Camera 1 - GoPro</h2>
+<p>All GoPro camera’s should be plugged into power using the USB port on the side of the camera.</p>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 GoPro</li>
 <li><input type="checkbox" disabled="" />
 Micro HDMI to HDMI cable</li>
 <li><input type="checkbox" disabled="" />
+GoPro camera mount</li>
+<li><input type="checkbox" disabled="" />
 Tripod</li>
 <li><input type="checkbox" disabled="" />
-Mini USB charging cable</li>
-<li><input type="checkbox" disabled="" />
-Fully charged battery</li>
-<li><input type="checkbox" disabled="" />
-Spare GoPro battery</li>
+Mini USB charging cable plugged in</li>
 </ul>
-<h2 id="camera-2---marshall-broadcast">Camera 2 - Marshall Broadcast</h2>
+<h2 id="camera-2---gopro">Camera 2 - GoPro</h2>
+<p>All GoPro camera’s should be plugged into power using the USB port on the side of the camera.</p>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Marshall broadcast camera</li>
+GoPro</li>
 <li><input type="checkbox" disabled="" />
-camera power cable</li>
+Micro HDMI to HDMI cable</li>
 <li><input type="checkbox" disabled="" />
-camera power cable extension</li>
+GoPro camera mount</li>
 <li><input type="checkbox" disabled="" />
-25’ HDMI cable</li>
+Tripod</li>
 <li><input type="checkbox" disabled="" />
-Tri-pod</li>
-<li><input type="checkbox" disabled="" />
-Extension power chord to base of tripod</li>
+Mini USB charging cable plugged in</li>
 </ul>
 <h2 id="camera-3---laptop">Camera 3 - Laptop</h2>
 <ul class="task-list">
@@ -138,7 +134,7 @@ Download pre-music</li>
 <li><input type="checkbox" disabled="" />
 Download pre-service screen</li>
 </ul>
-<h2 id="camera-4---document-camera">Camera 4 - Document Camera</h2>
+<h2 id="camera-4---document-camera-if-needed">Camera 4 - Document Camera (if needed)</h2>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Document camera</li>
@@ -159,7 +155,7 @@ Stereo-mini to XLR Male connector</li>
 <li><input type="checkbox" disabled="" />
 2 x 50’ XLR cables to XAIR 16.</li>
 </ul>
-<h2 id="admin-laptop">Admin Laptop</h2>
+<h2 id="optional-admin-laptop">Optional Admin Laptop</h2>
 <p>This is an optional step used to control ATEM settings in addition to using the physical buttons on the box. Graphics must be uploaded via this software</p>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
@@ -203,8 +199,6 @@ Press the button to start streaming</li>
 <h2 id="recording">Recording</h2>
 <p>We can record all audio and video exactly as we stream it directly to a hard drive or USB stick attached to the ATEM Mini Pro</p>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
-USB C Hard drive formatted properly</li>
 <li><input type="checkbox" disabled="" />
 USB C Hard drive connected to USB C port on the back</li>
 </ul>
