adding coast link

--- a/coast/index.html
+++ b/coast/index.html
@@ -2,5 +2,5 @@
 <html>
 <head>
 <title>Cantus.us</title>
-<meta http-equiv="REFRESH" content="0;url=https://cantus.us/zoom_bomb.txt"></HEAD>
+<meta http-equiv="REFRESH" content="0;url=https://sc137.github.io/coast-teaching-demo"></HEAD>
 </HTML>
