added link to canvas scripts

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </p>
 <ul>
     <li>
-        Take this to visit my  <a href="https://cantus.us/music.html" 
+        Visit my  <a href="https://cantus.us/music.html" 
             target="_blank">music page</a>
         </li>
     <li>
@@ -117,6 +117,10 @@
         <a href="https://cantus.us/posts/encrypt-tax-docs.html" 
             target="_blank">Encrypt your private documents before you send them 
                 over the internet.</a>
+    </li>
+    <li>
+        I use <a href="https://github.com/sc137/canvas_scripts" target="_blank">these python scripts</a>
+            to manage and update my courses in canvas
     </li>
 </ul>
 
