--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     Official Homepage<br />
     =================<br />
     <br />
-    Hi, I'm Sable
+    Hi, I'm Sable.
 </p>
 <p>
     I have a few projects here on the internet. 
@@ -101,7 +101,7 @@
     <li>
         This script is to 
         <a href="https://gist.github.com/sc137/f94436f89f4c1654c4ae4d8445112f31" 
-            target="_blank">'toot' to your mastodon instance.</a> 
+            target="_blank">'toot' to your mastodon instance</a> 
         </li>
     <li><img src="img/tippy.png" height=15>
         Tippy is a single page HTML/JS
@@ -116,7 +116,7 @@
     <li>
         <a href="https://cantus.us/posts/encrypt-tax-docs.html" 
             target="_blank">Encrypt your private documents before you send them 
-                over the internet.</a>
+                over the internet</a>
     </li>
     <li>
         I use <a href="https://github.com/sc137/canvas_scripts" target="_blank">these python scripts</a>
@@ -125,7 +125,7 @@
 </ul>
 
 <p>
-    Thanks for visiting.
+    Thanks for visiting,
 </p>
 
 <p>
@@ -137,7 +137,7 @@
 
 <footer>
     <small><br />
-    &nbsp; &copy;2021 All Rights Reserved.
+    &nbsp; &copy;2022 All Rights Reserved.
     <br />
     <span id="b">$ </span>curl https://cantus.us/public.key
     </small>
