--- a/lbcc/index.html
+++ b/lbcc/index.html
@@ -6,6 +6,16 @@
     <title>Sable Cantus, CISSPy</title>
     <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
+<!-----------------------------------------------------
+           _     _                        _
+ ___  __ _| |__ | | ___    ___ __ _ _ __ | |_ _   _ ___
+/ __|/ _` | '_ \| |/ _ \  / __/ _` | '_ \| __| | | / __|
+\__ \ (_| | |_) | |  __/ | (_| (_| | | | | |_| |_| \__ \
+|___/\__,_|_.__/|_|\___|  \___\__,_|_| |_|\__|\__,_|___/
+
+This site is created especially for the fine folks at
+Long Beach City College - Go Vikings!
+------------------------------------------------------>
     
 </head>
 <body>
