--- a/lbcc/index.html
+++ b/lbcc/index.html
@@ -41,7 +41,7 @@ Long Beach City College - Go Vikings!
     <h2>Teaching Philosophy</h2>
 
     <p>
-        I pursue professional development as an instructor, as well as in Information Technology and Security. I design my courses, and my classroom experience to be an environment designed around the learner and the process of learning.<br /><br />
+        I pursue professional development as an instructor, as well as in Information Technology and Security. My classroom experience, and my courses that I teach, are designed around creating a postive learning environment and encouraging the student into the process of learning.<br /><br />
         Please take a look at my <a href="https://cantus.us/posts/teaching-philosophy.html" target="_blank">Teaching Philosophy</a> for more detailed information.
     </p>
 
