--- a/mtsac/index.html
+++ b/mtsac/index.html
@@ -46,7 +46,7 @@ Mt. San Antonio College.
     </p>
 
     <p>Sable Cantus, M.A., CISSP<br />
-       Adjunct Instructor, LBCC</p>
+       Adjunct Instructor, MT. SAC</p>
     <img src="../img/CISSP-logo-2lines.jpg" width="200px"><br /> 
     <img src="mtsac-logo.png" width="170px">
 
