--- a/mtsac/index.html
+++ b/mtsac/index.html
@@ -32,16 +32,16 @@ Mt. San Antonio College.
     
     <h2>Teaching Demonstration</h2>
 
-    <p>I have prepared a brief Teaching Demonstration for you today.<br /><br />
+    <p>I have prepared a brief teaching demonstration for you today.<br /><br />
 
-    <strong>Explain the primary differences between IPv4 and IPv6. Specifically, as it relates to security, subnetting, broadcast/multicast messages, and public/private addresses</strong><br /><br />
+    <strong>Explain the primary differences between IPv4 and IPv6. Specifically, as it relates to security, subnetting, broadcast/multicast messages, and public/private addresses.</strong><br /><br />
     
     Please view my <a href="https://sc137.github.io/mtsac-teaching-demo" target="_blank">Teaching Demonstration</a> on the web. The <a href="https://github.com/sc137/mtsac-teaching-demo" target="_blank">source code is available on github</a></p>
 
     <h2>Teaching Philosophy</h2>
 
     <p>
-        I pursue professional development as an instructor, as well as in Information Technology and Security. My classroom experience, and my courses that I teach, are designed around creating a postive learning environment and encouraging the student into the process of learning.<br /><br />
+        I pursue professional development as an instructor, as well as in Information Technology and Security. The courses that I teach are designed around creating a postive learning environment while encouraging students' success in the process of learning.<br /><br />
         Please take a look at my <a href="https://cantus.us/posts/teaching-philosophy.html" target="_blank">Teaching Philosophy</a> for more detailed information.
     </p>
 
