--- a/mtsac/index.html
+++ b/mtsac/index.html
@@ -41,7 +41,7 @@ Mt. San Antonio College.
     <h2>Teaching Philosophy</h2>
 
     <p>
-        I pursue professional development as an instructor, as well as in Information Technology and Security. The courses that I teach are designed around creating a postive learning environment while encouraging students' success in the process of learning.<br /><br />
+        I pursue professional development as an instructor, as well as in Information Technology and Security. The courses that I teach are designed around creating a positive learning environment while encouraging students' success in the process of learning.<br /><br />
         Please take a look at my <a href="https://cantus.us/posts/teaching-philosophy.html" target="_blank">Teaching Philosophy</a> for more detailed information.
     </p>
 
