adding google workspace

--- a/certs.html
+++ b/certs.html
@@ -33,7 +33,12 @@
 <p><a href="https://www.youracclaim.com/badges/b95d6824-708f-4617-9473-8f80d5c67cde/public_url" target="__blank"><img src="img/CISSP-logo-2lines.jpg" width="350px" /></a></p>
 
 <h3>Google Cloud</h3>
-<p><a href="https://www.cloudskillsboost.google/public_profiles/14bf99e7-647e-4623-98ea-3fb6ceb81efa/badges/2244008" target="__blank"><img src="img/gc-essentials.png" width="150px" /></a></p>
+<p><a href="https://www.cloudskillsboost.google/public_profiles/14bf99e7-647e-4623-98ea-3fb6ceb81efa/badges/2244008" target="__blank"><img src="img/gc-essentials.png" width="150px" /></a>
+
+&nbsp;
+
+<a href="https://www.cloudskillsboost.google/public_profiles/14bf99e7-647e-4623-98ea-3fb6ceb81efa/badges/2259662" target="__blank"><img src="img/google-workspace.png" width="150px"/></a>
+</p>
 
 <h3>CompTIA Security+</h3>
 <p><a href="https://www.youracclaim.com/badges/99757ccf-17eb-44c4-bcf3-d51d498b851c/public_url" target="_blank" rel="noopener"><img src="img/SecurityPlus.png" width="150" /></a></p>
