--- a/index.html
+++ b/index.html
@@ -17,22 +17,19 @@
 ------------------------------------------------------>
 <style type="text/css"> 
 	body {
-		background-color: white;
+		background-color: #fefefe;
+		color:#0f0f0f;
 		margin: 1em 10em;
 		width: 70%;
-	}
-	#console {
-		font-family: courier, monospace;
-		color: rgba(5, 5, 5, 0.97);
-		#width:750px;
-		margin-left:auto;
-		margin-right:auto;
-		margin-top:100px;
-		font-size:14px;
 	}
 	a {
 		color: #0bc;
 		text-decoration: none;
+	}
+	a:hover {
+    	background-color: rgba(208, 198, 198, 0.5);
+    	padding: 2px 4px;
+    	border-radius: 4px;
 	}
 	li {
     	line-height: 1.3;
@@ -46,31 +43,38 @@
 	#b {
 		color: red;
 	}
+	.cmd {
+    	color: rgba(15, 15, 15, 0.5);
+	}
+	.prompt {
+        color: rgba(255, 0 , 0, 0.8);
+	}
     footer {
         width: 100%;
         bottom: 0;
         position: fixed;
         background-color: white;
         padding-bottom: 5px;
+        font-family: monospace;
     }
 </style> 
 </head>
 
-<body id=console>
+<body>
 
-<p><span id="b">$ </span>
-    ./homepage.sh<br />
-    <br />
-    Official Homepage<br />
-    =================<br />
-    <br />
+<p><span class="prompt">$ </span>
+    <span class="cmd">./homepage.sh</span><br>
+    <br>
+    Official Homepage<br>
+    =================<br>
+    <br>
     Hi, I'm Sable.
 </p>
 <p>
     I have a few projects here on the internet. 
-    <br /><br /> 
-    I enjoy playing guitar and trombone, coding, hiking, teaching, video games, 
-    board games, the raspberry pi,
+    <br><br> 
+    I enjoy playing music with my guitar and trombone, teaching, coding, 
+    hiking, playing video games, playing board games, the raspberry pi,
     and so much more.
     </p>
 <ul>
@@ -133,13 +137,13 @@
    <a href='https://twitter.com/sablecantus' target="_blank">@sablecantus</a>
 </p>
 
-<br /><br /><br />
+<br><br><br>
 
 <footer>
-    <small><br />
+    <small><br>
     &nbsp; &copy;2022 All Rights Reserved.
-    <br />
-    <span id="b">$ </span>curl https://cantus.us/public.key
+    <br>
+    <span class="prompt">$ </span>curl https://cantus.us/public.key
     </small>
 </footer>
 </body>
