--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 		width: 70%;
 		margin: 0 auto;
 	}
+	p {
+    	max-width: 75%;
+	}
 	a {
 		color: #0bc;
 		text-decoration: none;
@@ -34,15 +37,6 @@
 	}
 	li {
     	line-height: 1.3;
-	}
-	#a {
-		color: #0f0;
-	}
-	#c {
-		color: #0bc;
-	}
-	#b {
-		color: red;
 	}
 	.cmd {
     	color: rgba(15, 15, 15, 0.5);
@@ -144,7 +138,8 @@
     <small><br>
     &nbsp; &copy;2022 All Rights Reserved.
     <br>
-    <span class="prompt">$ </span>curl https://cantus.us/public.key
+    <span class="prompt">$ </span>
+    <i>curl https://cantus.us/public.key<i>
     </small>
 </footer>
 </body>
