--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 <p>
     I have a few projects here on the internet. 
     <br><br> 
-    I enjoy playing music with my guitar and trombone, teaching, coding, 
-    hiking, playing video games, playing board games, the raspberry pi,
+    I enjoy playing music, teaching, coding, bike riding, yoga,
+    hiking, playing video games, playing board games, raspberry pi projects,
     and so much more.
     </p>
 <ul>
