--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     	padding: 2px 4px;
     	border-radius: 4px;
 	}
-	li {
+
     	line-height: 1.3;
 	}
 	.cmd {
@@ -39,9 +39,10 @@
         color: rgba(255, 0 , 0, 0.8);
 	}
 	.wrap {
-    	width: 80%;
+    	max-width: 800px;
     	margin: 0 auto;
-	}
+	    padding: 15px 0;
+    }
     footer {
         bottom: 0;
         margin-top: 25px;
