--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <style type="text/css"> 
 	body {
 		background-color: #f7f7f7;
-		color:#0f0f0f;
+		color: #0f0f0f;
+    	line-height: 1.3;
+        font-family: Consolas, Monaco, monospace;
 	}
 	a {
 		color: #0bc;
@@ -28,9 +30,6 @@
     	background-color: rgba(208, 198, 198, 0.5);
     	padding: 2px 4px;
     	border-radius: 4px;
-	}
-
-    	line-height: 1.3;
 	}
 	.cmd {
     	color: rgba(15, 15, 15, 0.5);
@@ -47,7 +46,6 @@
         bottom: 0;
         margin-top: 25px;
         padding-bottom: 5px;
-        font-family: monospace;
     }
 </style> 
 </head>
@@ -132,10 +130,10 @@
 
 <footer>
     <small><br>
-    &copy;2022 All Rights Reserved.
+    &copy;2022 All Rights Reserved
     <br>
     <span class="prompt">$ </span>
-    <i>curl https://cantus.us/public.key<i>
+    <i class="cmd">curl https://cantus.us/public.key<i>
     </small>
 </footer>
 </div>
