--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
                                                         
 ------------------------------------------------------>
 <style type="text/css"> 
-	body {
+	html {
+        height: 100%;
+    }
+    body {
+        position: relative;
 		background-color: #f7f7f7;
 		color: #0f0f0f;
-    	line-height: 1.3;
+    	line-height: 1.5;
         font-family: Consolas, Monaco, monospace;
+        min-height: 100%;
 	}
 	a {
 		color: #0bc;
@@ -38,14 +43,16 @@
         color: rgba(255, 0 , 0, 0.8);
 	}
 	.wrap {
+        position: relative;
     	max-width: 800px;
     	margin: 0 auto;
 	    padding: 15px 0;
     }
     footer {
         bottom: 0;
+        position: relative;
         margin-top: 25px;
-        padding-bottom: 5px;
+        padding-bottom: 10px;
     }
 </style> 
 </head>
@@ -57,17 +64,19 @@
     <span class="cmd">./homepage.sh</span><br>
     <br>
     Official Homepage<br>
-    =================<br>
-    <br>
+    =================
+</p>
+<p>
     Hi, I'm Sable.
 </p>
 <p>
     I have a few projects here on the internet. 
-    <br><br> 
+</p>
+<p>
     I enjoy playing music, teaching, coding, bike riding, yoga,
     hiking, playing video games, playing board games, raspberry pi projects,
     and so much more.
-    </p>
+</p>
 <ul>
     <li>
         Visit my  <a href="https://cantus.us/music.html" 
@@ -125,7 +134,6 @@
 
 <p>
     /sable <br/>
-   <a href='https://twitter.com/sablecantus' target="_blank">@sablecantus</a>
 </p>
 
 <footer>
