--- a/mtsac/index.html
+++ b/mtsac/index.html
@@ -37,7 +37,7 @@ Mt. San Antonio College.
 
     <p>I teach Computer Information Systems at Mt. San Antonio College. I possess a Bachelor of Science in Business Management, a Master of Arts in Music, and I am a Certified Information Systems Security Professional (CISSP). Please review <a href="https://cantus.us/certs.html" target="_blank">my Professional Training &amp; Certifications</a> page for more information.</p>
     
-    <h2>Courses Taught</h2>
+    <h2>Courses Offered</h2>
     <img src="mtsac-logo.png" width="170px">
     
     <p>I am offering the following courses in Fall 2022.</p>
