--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
 </p>
 
 <p>
-    /sable <br/>
+    <a href="mailto:harps_lawyer0q@icloud.com?subject=Website Contact&body=I'm sending this message from your website." title="Send me an email">/sable</a><br/>
 </p>
 
 <footer>
     <small><br>
-    &copy;2022 All Rights Reserved
+    &copy; 2022 All Rights Reserved
     <br>
     <span class="prompt">$ </span>
     <i class="cmd">curl https://cantus.us/public.key<i>
