updated msac sig

--- a/msac/index.html
+++ b/msac/index.html
@@ -57,7 +57,7 @@
       <li>CISN 71 - Introduction to Cloud Computing</li>
     </ul>
 
-    <p><em>Sable Cantus, CISSP</em></p>
+    <p><em>Sable</em></p>
     <img src="../img/CISSP-logo-2lines.jpg" width="200px" /><br />
   </body>
 </html>
