--- a/msac/index.html
+++ b/msac/index.html
@@ -37,10 +37,10 @@
       I teach Computer Information Systems at Mt. San Antonio College. I
       possess a Bachelor of Science in Business Management, a Master of Arts in
       Music, and I am a Certified Information Systems Security Professional
-      (CISSP). Please review
-      <a href="https://cantus.us/certs.html" target="_blank"
-        >my Professional Training &amp; Certifications</a
-      >
+      (CISSP). Please review my
+      <a href="https://cantus.us/certs.html" target="_blank">
+        Professional Training &amp; Certifications
+      </a>
       page for more information.
     </p>
 
