--- a/index.html
+++ b/index.html
@@ -5,64 +5,20 @@
 <meta name="viewport" content="width=device-width" initial-scale=1>
 <meta name="description" content="Official Homepage - Sable Cantus">
 <meta name="author" content="Sable Cantus">
-
+<link rel="stylesheet" href="styles.css">
 <title>Cantus.us - Official Homepage</title>
 <!-----------------------------------------------------
-           _     _                        _             
- ___  __ _| |__ | | ___    ___ __ _ _ __ | |_ _   _ ___ 
+           _     _                        _
+ ___  __ _| |__ | | ___    ___ __ _ _ __ | |_ _   _ ___
 / __|/ _` | '_ \| |/ _ \  / __/ _` | '_ \| __| | | / __|
 \__ \ (_| | |_) | |  __/ | (_| (_| | | | | |_| |_| \__ \
 |___/\__,_|_.__/|_|\___|  \___\__,_|_| |_|\__|\__,_|___/
-                                                        
+
 ------------------------------------------------------>
-<style type="text/css"> 
-	html {
-        height: 100%;
-    }
-    body {
-        position: relative;
-		background-color: #f7f7f7;
-		color: #0f0f0f;
-    	line-height: 1.5;
-        font-family: Consolas, Monaco, monospace;
-        min-height: 100%;
-	}
-	a {
-		color: #0bc;
-		text-decoration: none;
-	}
-	a:hover {
-    	background-color: rgba(208, 198, 198, 0.5);
-    	padding: 2px 4px;
-    	border-radius: 4px;
-	}
-	.cmd {
-    	color: rgba(15, 15, 15, 0.5);
-	}
-	.prompt {
-        color: rgba(255, 0 , 0, 0.8);
-	}
-	.wrap {
-        position: relative;
-    	max-width: 800px;
-    	margin: 0 auto;
-	    padding: 15px 0;
-    }
-    .signature {
-        font-family: cursive;
-        font-size: 1.5em;
-    }
-    footer {
-        bottom: 0;
-        position: relative;
-        margin-top: 25px;
-        padding-bottom: 10px;
-    }
-</style> 
 </head>
 
 <body>
-<div class="wrap">    
+<div class="wrap">
 
 <p><span class="prompt">$ </span>
     <span class="cmd">./homepage.sh</span><br>
@@ -74,7 +30,7 @@
     Hi, I'm Sable.
 </p>
 <p>
-    I have a few projects here on the internet. 
+    I have a few projects here on the internet.
 </p>
 <p>
     I enjoy playing music, teaching, coding, bike riding, yoga,
@@ -83,28 +39,28 @@
 </p>
 <ul>
     <li>
-        Visit my  <a href="https://cantus.us/music.html" 
+        Visit my  <a href="https://cantus.us/music.html"
             target="_blank">🎵 music page 🎸</a>
         </li>
     <li>
-        Take a look at my <a href="https://cantus.us/certs.html" 
+        Take a look at my <a href="https://cantus.us/certs.html"
             target="_blank">professional certifications</a>
         </li>
     <li>
-        Here is a fun d20 
-        <img src="img/Purple_d20.png" height=15> 
+        Here is a fun d20
+        <img src="img/Purple_d20.png" height=15>
         <a href="https://github.com/sc137/d20passphrase" target="_blank">
             passphrase generator in python</a>
         </li>
     <li>
-        I use a custom 🐍 python 🐍 email system to send and manage 
-        <a href="https://github.com/sc137/python-send-email" 
+        I use a custom 🐍 python 🐍 email system to send and manage
+        <a href="https://github.com/sc137/python-send-email"
             target="_blank">email blasts</a>
         </li>
     <li>
-        This script will let you 
-        <a href="https://gist.github.com/sc137/f94436f89f4c1654c4ae4d8445112f31" 
-            target="_blank">'toot' to your mastodon instance</a> 
+        This script will let you
+        <a href="https://gist.github.com/sc137/f94436f89f4c1654c4ae4d8445112f31"
+            target="_blank">'toot' to your mastodon instance</a>
         </li>
     <li><img src="img/tippy.png" height=15>
         Tippy is a single page HTML5/JS
@@ -112,14 +68,14 @@
             tip calculator app for your phone</a>
     </li>
     <li>
-        I make presentations using 
-        <a href="https://github.com/sc137/reveal_pres_template" 
+        I make presentations using
+        <a href="https://github.com/sc137/reveal_pres_template"
             target="_blank">markdown, pandoc, and revealjs</a>
     </li>
     <li>
-        Never send your private information over email. Be sure to 
-        <a href="https://cantus.us/posts/encrypt-tax-docs.html" 
-            target="_blank">encrypt your private documents before you send them 
+        Never send your private information over email. Be sure to
+        <a href="https://cantus.us/posts/encrypt-tax-docs.html"
+            target="_blank">encrypt your private documents before you send them
                 over the internet</a>
     </li>
     <li>
