--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
     Hi, I'm Sable.
 </p>
 <p>
-    I have a few projects here on the internet.
+    I have a few projects on the internet.
 </p>
 <p>
-    I enjoy playing music, teaching, coding, bike riding, yoga,
-    hiking, playing video games, playing board games, raspberry pi projects,
+    I enjoy playing music, coding, yoga, video games, board games,
     and so much more.
 </p>
 <ul>
