--- a/certs.html
+++ b/certs.html
@@ -1,249 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="description" content="Personal website for Sable Cantus" />
-    <meta name="author" content="Sable Cantus" />
-    <meta http-equiv="Content-Style-Type" content="text/css" />
-    <link rel="stylesheet" href="https://newcss.net/new.min.css" />
-    <title>Cantus.us - Certifications</title>
-    <link rel="stylesheet" href="css/template.css" />
-    <style type="text/css">
-      body {
-        max-width: 70%;
-        margin: auto;
-      }
-    </style>
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="Personal website for Sable Cantus" />
+  <meta name="author" content="Sable Cantus" />
+  <meta http-equiv="Content-Style-Type" content="text/css" />
+  <link rel="stylesheet" href="https://newcss.net/new.min.css" />
+  <title>Cantus.us - Certifications</title>
+  <link rel="stylesheet" href="css/template.css" />
+  <style type="text/css">
+    body {
+      max-width: 70%;
+      margin: auto;
+    }
+  </style>
+  <!--
  ___  __ _| |__ | | ___    ___ __ _ _ __ | |_ _   _ ___
 / __|/ _` | '_ \| |/ _ \  / __/ _` | '_ \| __| | | / __|
 \__ \ (_| | |_) | |  __/ | (_| (_| | | | | |_| |_| \__ \
 |___/\__,_|_.__/|_|\___|  \___\__,_|_| |_|\__|\__,_|___/
 -->
-  </head>
+</head>
 
-  <h1>Professional Training and Certifications</h1>
-  <p>Sable Cantus</p>
-  <hr />
-  <h3>Certified Information Systems Security Professional (CISSP)</h3>
-  <ul>
-    <li>7/3/2018 #657467</li>
-    <li>(ISC)2</li>
-  </ul>
-  <p>
-    <a
-      href="https://www.youracclaim.com/badges/b95d6824-708f-4617-9473-8f80d5c67cde/public_url"
-      target="__blank"
-      ><img src="img/CISSP-logo-2lines.jpg" width="350px"
-    /></a>
-  </p>
+<h1>Professional Training and Certifications</h1>
+<p>Sable Cantus</p>
+<hr />
+<h3>Certified Information Systems Security Professional (CISSP)</h3>
+<ul>
+  <li>7/3/2018 #657467</li>
+  <li>(ISC)2</li>
+</ul>
+<p>
+  <a href="https://www.youracclaim.com/badges/b95d6824-708f-4617-9473-8f80d5c67cde/public_url" target="__blank"><img
+      src="img/CISSP-logo-2lines.jpg" width="350px" /></a>
+</p>
 
-  <h3>TRAIN Machine Learning Bootcamp - The Coding School</h3>
-  <ul>
-    <li>72 hours</li>
-    <li>Certificate of Completion</li>
-    <li>4 Stanford CEU's</li>
-    <li>7/24/23 - 8/4/23</li>
-  </ul>
+<h3>TRAIN Machine Learning Bootcamp - The Coding School</h3>
+<ul>
+  <li>72 hours</li>
+  <li>Certificate of Completion</li>
+  <li>4 Stanford CEU's</li>
+  <li>7/24/23 - 8/4/23</li>
+</ul>
 
-  <h3>WASTC Faculty Development: Azure AI</h3>
-  <ul>
-    <li>Certificate of Completion</li>
-    <li>36 hours</li>
-    <li>6/19/23 - 6/23/23</li>
-  </ul>
+<a href="https://verified.sertifier.com/en/verify/47928418613605/" target="_blank">
+  <img src="img/ai.png" width="200px"></a>
+<h3>WASTC Faculty Development: Azure AI</h3>
+<ul>
+  <li>Certificate of Completion</li>
+  <li>36 hours</li>
+  <li>6/19/23 - 6/23/23</li>
+</ul>
 
-  <h3>WASTC Faculty Development: JavaScript Institute</h3>
-  <ul>
-    <li>Certificate of Completion</li>
-    <li>36 hours</li>
-    <li>6/12/23 - 6/16/23</li>
-  </ul>
+<h3>WASTC Faculty Development: JavaScript Institute</h3>
+<ul>
+  <li>Certificate of Completion</li>
+  <li>36 hours</li>
+  <li>6/12/23 - 6/16/23</li>
+</ul>
 
-  <h3>Training From the Back of the Room</h3>
-  <ul>
-    <li>Certificate of Completion</li>
-    <li>14 hours</li>
-    <li>1/13/2023 - 1/27/2023</li>
-  </ul>
+<h3>Training From the Back of the Room</h3>
+<ul>
+  <li>Certificate of Completion</li>
+  <li>14 hours</li>
+  <li>1/13/2023 - 1/27/2023</li>
+</ul>
 
-  <h3>Google Cloud</h3>
-  <p>
-    <a
-      href="https://www.cloudskillsboost.google/public_profiles/14bf99e7-647e-4623-98ea-3fb6ceb81efa/badges/2244008"
-      target="__blank"
-      ><img src="img/gc-essentials.png" width="150px"
-    /></a>
+<h3>Google Cloud</h3>
+<p>
+  <a href="https://www.cloudskillsboost.google/public_profiles/14bf99e7-647e-4623-98ea-3fb6ceb81efa/badges/2244008"
+    target="__blank"><img src="img/gc-essentials.png" width="150px" /></a>
 
-    &nbsp;
+  &nbsp;
 
-    <a
-      href="https://www.cloudskillsboost.google/public_profiles/14bf99e7-647e-4623-98ea-3fb6ceb81efa/badges/2259662"
-      target="__blank"
-      ><img src="img/google-workspace.png" width="150px"
-    /></a>
-  </p>
+  <a href="https://www.cloudskillsboost.google/public_profiles/14bf99e7-647e-4623-98ea-3fb6ceb81efa/badges/2259662"
+    target="__blank"><img src="img/google-workspace.png" width="150px" /></a>
+</p>
 
-  <h3>CompTIA Security+</h3>
-  <p>
-    <a
-      href="https://www.youracclaim.com/badges/99757ccf-17eb-44c4-bcf3-d51d498b851c/public_url"
-      target="_blank"
-      rel="noopener"
-      ><img src="img/SecurityPlus.png" width="150"
-    /></a>
-  </p>
-  <h3>Amazon Web Services (AWS) Certifications</h3>
-  <ul>
-    <li>
-      <strong>Amazon Web Services (AWS) Solutions Architect Associate</strong>
-      - August 2019
-    </li>
-    <li>
-      <strong>Amazon Web Services (AWS) Certified Cloud Practitioner</strong> -
-      June 2019
-    </li>
-  </ul>
-  <p>
-    <img src="img/accp.png" width="150" /><img
-      src="img/aws-saa.png"
-      width="150"
-    />
-  </p>
-  <h3>Amazon Web Services (AWS Educate)</h3>
-  <ul>
-    <li>
-      Cloud Architect - Cyber Security Specialist - AWS Digital Credential
-    </li>
-    <li>Cloud Support Engineer - AWS Digital Credential</li>
-    <li>Cloud Computing 101 - AWS Digital Credential</li>
-  </ul>
-  <p>
-    <img
-      src="img/cybersecurity-specialist.png"
-      alt="cloud-supp-eng"
-      width="175"
-    /><img src="img/cloud-supp-eng.png" alt="cloud-supp-eng" width="175" /><img
-      src="img/cloud-computing-101.png"
-      alt="cloud-computing-101"
-      width="175"
-    />
-  </p>
-  <h3>
-    Certificate of Completion: DevSecOps Integrating Security Into DevOps
-  </h3>
-  <ul>
-    <li>1/31/2019</li>
-    <li>(ISC)2 - 5 CPE</li>
-  </ul>
-  <h3>Understanding Cisco Cybersecurity Operations</h3>
-  <ul>
-    <li>100 hours</li>
-    <li>Certificate of Completion</li>
-    <li>July 2018</li>
-  </ul>
-  <h3>Cisco Networking Academy Connecting Things</h3>
-  <ul>
-    <li>Certificate of Completion, Certified Instructor</li>
-    <li>June 2018</li>
-    <li>36 hours</li>
-  </ul>
-  <h3>Understanding Cisco Cybersecurity Fundamentals</h3>
-  <ul>
-    <li>100 hours</li>
-    <li>Certificate of Completion</li>
-    <li>May 2018</li>
-  </ul>
-  <h3>BIE Project Based Learning</h3>
-  <ul>
-    <li>21 hours</li>
-    <li>August 2017</li>
-  </ul>
-  <h3>WASTC Faculty Development: Certified Ethical Hacker</h3>
-  <ul>
-    <li>36 hours</li>
-    <li>6/26/17 - 6/30/17</li>
-  </ul>
-  <h3>Apple Teacher - 2016</h3>
-  <ul>
-    <li>Certificate</li>
-  </ul>
-  <p><img src="img/apple.png" width="175px" /></p>
-  <h3>
-    WASTC Faculty Development; Teaching Programming Fundamentals using Python
-  </h3>
-  <ul>
-    <li>36 hours</li>
-    <li>6/20 - 6/24/2016</li>
-  </ul>
-  <h3>Solid State Logic AWS 924 Training</h3>
-  <ul>
-    <li>8 hours</li>
-    <li>10/25/2016</li>
-  </ul>
-  <h3>Avid Sibelius Certified Instructor</h3>
-  <ul>
-    <li>3 days</li>
-    <li>2/2016</li>
-  </ul>
-  <p><img src="img/sib.jpg" width="175px" /></p>
-  <h3>Pro Tools 100 Certified Instructor</h3>
-  <ul>
-    <li>5 days</li>
-    <li>12/2015</li>
-  </ul>
-  <p><img src="img/pt.jpg" width="175px" /></p>
-  <h3>On Course I</h3>
-  <ul>
-    <li>Certificate</li>
-    <li>3 days</li>
-    <li>8/15/2015</li>
-  </ul>
-  <h3>
-    Adobe Certified Associate - Visual Communication Using Adobe Photoshop
-  </h3>
-  <ul>
-    <li>Certificate</li>
-    <li>3/8/15</li>
-  </ul>
-  <p>
-    <img
-      src="img/adobe-certified-associate-in-visual-communication-using-adobe-photoshop.png"
-      width="125"
-    />
-  </p>
-  <h3>Enhancing Basic Skills Across the Curriculum</h3>
-  <ul>
-    <li>6 hours</li>
-    <li>1/27/15</li>
-  </ul>
-  <h3>Designing Learner Centered Instruction</h3>
-  <ul>
-    <li>15 hours</li>
-    <li>6/3 - 6/4/14</li>
-  </ul>
-  <h3>
-    Teaching &amp; Engaging Students in CTE-STEM Careers thru Gaming: A
-    Minecraft Workshop
-  </h3>
-  <ul>
-    <li>7 hours</li>
-    <li>11/21/14</li>
-  </ul>
-  <h3>Oracle APEX Four Day Workshop</h3>
-  <ul>
-    <li>30 hours</li>
-    <li>8/11/14 - 8/14/14</li>
-  </ul>
-  <h3>CFA The Unconscious Bias Program</h3>
-  <ul>
-    <li>Certificate</li>
-    <li>24 hours</li>
-    <li>Modules 1 - 4: 1/17 - 1/18 2013</li>
-    <li>Modules 5 - 6: 9/20/2013</li>
-  </ul>
+<h3>CompTIA Security+</h3>
+<p>
+  <a href="https://www.youracclaim.com/badges/99757ccf-17eb-44c4-bcf3-d51d498b851c/public_url" target="_blank"
+    rel="noopener"><img src="img/SecurityPlus.png" width="150" /></a>
+</p>
+<h3>Amazon Web Services (AWS) Certifications</h3>
+<ul>
+  <li>
+    <strong>Amazon Web Services (AWS) Solutions Architect Associate</strong>
+    - August 2019
+  </li>
+  <li>
+    <strong>Amazon Web Services (AWS) Certified Cloud Practitioner</strong> -
+    June 2019
+  </li>
+</ul>
+<p>
+  <img src="img/accp.png" width="150" /><img src="img/aws-saa.png" width="150" />
+</p>
+<h3>Amazon Web Services (AWS Educate)</h3>
+<ul>
+  <li>
+    Cloud Architect - Cyber Security Specialist - AWS Digital Credential
+  </li>
+  <li>Cloud Support Engineer - AWS Digital Credential</li>
+  <li>Cloud Computing 101 - AWS Digital Credential</li>
+</ul>
+<p>
+  <img src="img/cybersecurity-specialist.png" alt="cloud-supp-eng" width="175" /><img src="img/cloud-supp-eng.png"
+    alt="cloud-supp-eng" width="175" /><img src="img/cloud-computing-101.png" alt="cloud-computing-101" width="175" />
+</p>
+<h3>
+  Certificate of Completion: DevSecOps Integrating Security Into DevOps
+</h3>
+<ul>
+  <li>1/31/2019</li>
+  <li>(ISC)2 - 5 CPE</li>
+</ul>
+<h3>Understanding Cisco Cybersecurity Operations</h3>
+<ul>
+  <li>100 hours</li>
+  <li>Certificate of Completion</li>
+  <li>July 2018</li>
+</ul>
+<h3>Cisco Networking Academy Connecting Things</h3>
+<ul>
+  <li>Certificate of Completion, Certified Instructor</li>
+  <li>June 2018</li>
+  <li>36 hours</li>
+</ul>
+<h3>Understanding Cisco Cybersecurity Fundamentals</h3>
+<ul>
+  <li>100 hours</li>
+  <li>Certificate of Completion</li>
+  <li>May 2018</li>
+</ul>
+<h3>BIE Project Based Learning</h3>
+<ul>
+  <li>21 hours</li>
+  <li>August 2017</li>
+</ul>
+<h3>WASTC Faculty Development: Certified Ethical Hacker</h3>
+<ul>
+  <li>36 hours</li>
+  <li>6/26/17 - 6/30/17</li>
+</ul>
+<h3>Apple Teacher - 2016</h3>
+<ul>
+  <li>Certificate</li>
+</ul>
+<p><img src="img/apple.png" width="175px" /></p>
+<h3>
+  WASTC Faculty Development; Teaching Programming Fundamentals using Python
+</h3>
+<ul>
+  <li>36 hours</li>
+  <li>6/20 - 6/24/2016</li>
+</ul>
+<h3>Solid State Logic AWS 924 Training</h3>
+<ul>
+  <li>8 hours</li>
+  <li>10/25/2016</li>
+</ul>
+<h3>Avid Sibelius Certified Instructor</h3>
+<ul>
+  <li>3 days</li>
+  <li>2/2016</li>
+</ul>
+<p><img src="img/sib.jpg" width="175px" /></p>
+<h3>Pro Tools 100 Certified Instructor</h3>
+<ul>
+  <li>5 days</li>
+  <li>12/2015</li>
+</ul>
+<p><img src="img/pt.jpg" width="175px" /></p>
+<h3>On Course I</h3>
+<ul>
+  <li>Certificate</li>
+  <li>3 days</li>
+  <li>8/15/2015</li>
+</ul>
+<h3>
+  Adobe Certified Associate - Visual Communication Using Adobe Photoshop
+</h3>
+<ul>
+  <li>Certificate</li>
+  <li>3/8/15</li>
+</ul>
+<p>
+  <img src="img/adobe-certified-associate-in-visual-communication-using-adobe-photoshop.png" width="125" />
+</p>
+<h3>Enhancing Basic Skills Across the Curriculum</h3>
+<ul>
+  <li>6 hours</li>
+  <li>1/27/15</li>
+</ul>
+<h3>Designing Learner Centered Instruction</h3>
+<ul>
+  <li>15 hours</li>
+  <li>6/3 - 6/4/14</li>
+</ul>
+<h3>
+  Teaching &amp; Engaging Students in CTE-STEM Careers thru Gaming: A
+  Minecraft Workshop
+</h3>
+<ul>
+  <li>7 hours</li>
+  <li>11/21/14</li>
+</ul>
+<h3>Oracle APEX Four Day Workshop</h3>
+<ul>
+  <li>30 hours</li>
+  <li>8/11/14 - 8/14/14</li>
+</ul>
+<h3>CFA The Unconscious Bias Program</h3>
+<ul>
+  <li>Certificate</li>
+  <li>24 hours</li>
+  <li>Modules 1 - 4: 1/17 - 1/18 2013</li>
+  <li>Modules 5 - 6: 9/20/2013</li>
+</ul>
+
 </html>
