Color and misc.

--- a/msac/index.html
+++ b/msac/index.html
@@ -51,6 +51,7 @@
 
     <ul>
       <li>CISB 11 - Computer Information Systems</li>
+      <li>CISP 10 - Introduction to Object Oriented Programming</li>
       <li>CISW 17 - HTML, CSS, and JavaScript Programming</li>
       <li>CISW 24 - Secure Web Server Programming in Python</li>
       <li>CISW 31 - Secure Web Server Programming in PHP</li>
