fixed dark/light mode conflict

--- a/emeritus/index.html
+++ b/emeritus/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sable Cantus, CISSP</title>
-    <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
-    />
-    <!-----------------------------------------------------
+<!-----------------------------------------------------
            _     _                        _
  ___  __ _| |__ | | ___    ___ __ _ _ __ | |_ _   _ ___
 / __|/ _` | '_ \| |/ _ \  / __/ _` | '_ \| __| | | / __|
@@ -18,8 +13,8 @@
 ------------------------------------------------------>
     <style>
       body {
-        background-color: #fefefe;
-        color: #0f0f0f;
+        /* background-color: #fefefe;
+        color: #0f0f0f; */
         margin: 1em 10em;
         width: 70%;
         margin: 0 auto;
@@ -27,8 +22,9 @@
       td:nth-child(1), th:nth-child(1) {
         text-align: center;
       }
-      
     </style>
+    <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
   </head>
   <body>
     <header><a href="https://cantus.us/">Cantus.us</a></header>
@@ -49,7 +45,7 @@
     </p>
 
     <h2>Life and Technology</h2>
-    <img src="saddleback.svg" width="100px" />
+    <img src="saddleback.svg" width="100px"/>
 
     <p>I teach for the Emeritus Institute. This course is designed to cover current topics in a framework that explores fundamental technology we all use on a day-to-day basis</p>
 
