--- a/certs.html
+++ b/certs.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="Personal website for Sable Cantus" />
   <meta name="author" content="Sable Cantus" />
-  <meta http-equiv="Content-Style-Type" content="text/css" />
-  <link rel="stylesheet" href="https://newcss.net/new.min.css" />
   <title>Cantus.us - Certifications</title>
-  <link rel="stylesheet" href="css/template.css" />
-  <style type="text/css">
+  <!-- <link rel="stylesheet" href="css/template.css" /> -->
+  <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
+
+  <style>
     body {
       max-width: 70%;
       margin: auto;
@@ -37,16 +38,29 @@
       src="img/CISSP-logo-2lines.jpg" width="350px" /></a>
 </p>
 
-<h3>TRAIN Machine Learning Bootcamp - The Coding School</h3>
+<h3>TRAIN Machine Learning Professional Development Intensive II</h3>
 <ul>
-  <li>72 hours</li>
+  <li>40 hours</li>
   <li>Certificate of Completion</li>
   <li>4 Stanford CEU's</li>
-  <li>7/24/23 - 8/4/23</li>
+  <li>July 2024</li>
+</ul>
+
+<a href="img/train2.png" target="_blank" title="Open this in a new tab.">
+    <img src="img/train2.png" width="200px"></a>
+
+<h3>TRAIN Machine Learning Bootcamp - The Coding School</h3>
+<ul>
+  <li>40 hours</li>
+  <li>Certificate of Completion</li>
+  <li>4 Stanford CEU's</li>
+  <li>July 2023</li>
 </ul>
 
 <a href="https://verified.sertifier.com/en/verify/47928418613605/" target="_blank">
   <img src="img/ai.png" width="200px"></a>
+
+
 <h3>WASTC Faculty Development: Azure AI</h3>
 <ul>
   <li>Certificate of Completion</li>
