--- a/emeritus/index.html
+++ b/emeritus/index.html
@@ -159,7 +159,7 @@
     </tbody>
 </table>
  
-    <p><em>Sable</em></p>
-    <img src="../img/CISSP-logo-2lines.jpg" width="200px" /><br />
+    <p><em>Sable Cantus</em></p>
+    <!-- <img src="../img/CISSP-logo-2lines.jpg" width="200px" /><br /> -->
   </body>
 </html>
