cleaned up story page

--- a/stories/index.html
+++ b/stories/index.html
@@ -3,31 +3,15 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
+<link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
 <title>Stories by Jacob and Ethan</title>
-    <style>
-	    html {
-		    background: rgba(255, 255, 255, 0.94);
-		    font-size: 1.5em;
-	    }
-	    body {
-		    margin: 0 25 25 100;
-		    width: 100%;
-	    }
-	    p {
-		    font-style: italic;
-		    margin-top: -1.2em;
-		    margin-left: 2em;
-	    }
-	    audio {
-		    width: 70%;
-	    }
-	    </style>
 </head>
 
 <body>
 	
 	<h1>The Great Escape</h1>
-	<p>by Jacob Cantus</p>
+	<p>by Jacob (8 years old)</p>
 	
 	<audio controls preload="auto">
 		<source src="Jacob%20Cantus%20-%20The%20Great%20Escape.mp3" type="audio/mp3">
@@ -36,7 +20,7 @@
 	<hr />
 	
 	<h1>The Great Adventure</h1>
-	<p>by Ethan Cantus</p>
+	<p>by Ethan (6 years old)</p>
 	
 	<audio controls>
 		<source src="Ethan%20Cantus%20-%20The%20Adventure.mp3" type="audio/mp3">
