--- a/timer/index.html
+++ b/timer/index.html
@@ -2,5 +2,5 @@
 <html>
 <head>
 <title>Web Timer</title>
-<meta http-equiv="REFRESH" content="0;url="http://sc137.github.io/web-timer/"></HEAD>
+<meta http-equiv="REFRESH" content="0;url=https://sc137.github.io/web-timer/"></HEAD>
 </HTML>
