--- a/emeritus/index.html
+++ b/emeritus/index.html
@@ -81,7 +81,7 @@
               <td>Manage and secure your email accounts. Using Gmail, Outlook, Proton Mail, personal domains, and more</td>
           </tr>
           <tr>
-              <td>2</td>
+              <td>1</td>
               <td>Your New (Voice) Assistant - Alexa, Siri, and Google</td>
           </tr>
           <tr>
@@ -118,7 +118,7 @@
           </tr>
           <tr>
               <td>2</td>
-              <td>Social Media – Facebook, Twitter, Instagram, Discord, Mastodon, and other social apps</td>
+              <td>Social Media – Facebook, Twitter, Instagram, TikTok, and More...</td>
           </tr>
           <tr>
               <td>1</td>
@@ -155,6 +155,18 @@
         <tr>
             <td>1</td>
             <td>What are Passkeys?</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Configure Your Wireless Router</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Managing Your Photos</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>How to Setup a New PC</td>
         </tr>
     </tbody>
 </table>
