once you start updating...

--- a/msac/index.html
+++ b/msac/index.html
@@ -24,6 +24,18 @@
         width: 70%;
         margin: 0 auto;
       }
+      ul {
+        list-style-type: none;
+        margin-left: 0;
+        padding-left: 0;
+      }
+      li {
+        padding: 5px 20px;
+        
+      }
+      li:hover {
+        background-color: lightgray;
+      }
     </style>
   </head>
   <body>
@@ -47,7 +59,7 @@
     <h2>Courses Offered</h2>
     <img src="mtsac-logo.png" width="170px" />
 
-    <p>I am offering the following courses throughout the year.</p>
+    <p>I offer the following courses throughout the year:</p>
 
     <ul>
       <li>CISB 11 - Computer Information Systems</li>
@@ -58,6 +70,7 @@
       <li>CISN 71 - Introduction to Cloud Computing</li>
     </ul>
 
+    <p>Learn more by visiting <a href="https://www.mtsac.edu/cis/" target="_blank">our department homepage</a>.</p>
     <p><em>Sable</em></p>
     <img src="../img/CISSP-logo-2lines.jpg" width="200px" /><br />
   </body>
